Changing names looper -> commuter frontend -> commuter home -> tap dev -> tap

--- a/client/www/templates/topup.html
+++ b/client/www/templates/topup.html
@@ -1,4 +1,4 @@
-<ion-view title="Dev">
+<ion-view title="Top Up">
     <ion-content padding="true">
         <form novalidate class="simple-form">
     <label>Amount: 
