--- a/client/www/templates/tap.html
+++ b/client/www/templates/tap.html
@@ -1,4 +1,4 @@
-<ion-view title="home">
+<ion-view title="Tap">
     <ion-content padding="true">
         <h1>turn on the NFC and aproximate you device to the NFC reader</h1></br>
         <button class="button-full" ng-click="update()">TAP </button>
