Stripe/Noodlio Integration issue -> POST https://checkout.stripe.com/api/account/verifications 400 (Bad Request)
Order of events fixed.
Now is-> First pay by card,
               Then update balance.

However, User.updateBalance() function must be integrated at the IF not
at the ELSE.
It is not working at the IF because of this issue->

POST https://checkout.stripe.com/api/account/verifications 400 (Bad
Request)
Object {type: "StripeInvalidRequestError", stack: "Error: Invalid
integer: ↵    at Error._Error (/app…tickCallback
(internal/process/next_tick.js:98:9)", rawType:
"invalid_request_error", param: "amount", message: "Invalid integer: "…}

--- a/client/www/templates/dev.html
+++ b/client/www/templates/dev.html
@@ -1,6 +1,7 @@
 <ion-view >
   <ion-content class="padding center">
-
+    <form novalidate class="simple-form">
+    <div class="list">
     <label class="item item-input item-select">
       <div class="input-label">
         Amount:
@@ -15,10 +16,11 @@
                 <option value="30" default>€30.00 EUR</option>
         </select>
     </label>
-
+    </div>
     <div class="padding">
       <button class="button button-block button-energized" ng-click="update(selectAmmount)">Top Up €{{selectAmmount}}</button>
     </div>
+    </form>
 
     <p class="padding">
       <ion-spinner ng-show="status.loading"></ion-spinner>
